--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@
 /frontend/node_modules/
 /frontend/ecosystem.config.js
 /frontend/.env
+/frontend/yarn-error.log
 /frontend/dist/
 ecosystem.config.js
