--- a/backend/src/config/config.json
+++ b/backend/src/config/config.json
@@ -7,6 +7,14 @@
     "port": "3306",
     "dialect": "mysql"
   },
+  "test": {
+    "username": "root",
+    "password": "admin",
+    "database": "urlshortner",
+    "host": "127.0.0.1",
+    "port": "3306",
+    "dialect": "mysql"
+  },
   "production": {
     "username": "root",
     "password": "admin",
